kubernetes/apps/network/external-services/home-assistant/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app home-assistant
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - "${HOME_ASSISTANT_LAN_HOST}"
    conditions:
      ready: true
ports:
  - name: http
    port: 8123
